# Aegis-FraudStream

./: .bandit.yaml  .coveragerc  .dockerignore  .env.example  .git-blame-ignore-revs  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .semgrep.yaml  .sops.yaml  .spectral.yaml  .yamllint.yaml  API_VERSIONING.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  COST_OPTIMIZATION.md  DCO  DEPRECATION_POLICY.md  Dockerfile  ETHICS.md  ETHICS_AND_FAIRNESS.md  FAIRNESS_EVAL.md  GOVERNANCE.md  INCIDENT_RESPONSE.md  Justfile  LICENSE  MAINTAINERS  MAINTAINERS.md  Makefile  NOTICE  PRIVACY.md  PRIVACY_POLICY.md  README.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  REUSE.toml  RISK_REGISTER.md  (+28 more)
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release-drafter.yml  renovate.json
.well-known/: security.txt
.zap/: rules.tsv
aegis_cli/: __main__.py
aegis_client/: __init__.py  cli.py  client.py
aegis_fraudstream/: __init__.py  app.py  audit.py  audit_chain.py  auth.py  cli.py  client.py  config.py  features.py  idempotency.py  jobs.py  kms.py  logging_conf.py  logging_config.py  logging_setup.py  middleware.py  model.py  opa.py  policy.py  privacy.py  problem.py  rate_limit.py  ratelimit.py  schemas.py  services.py  storage.py  telemetry.py  tenant_ctx.py
alembic/: env.py
bench/: benchmark_http.py  k6-smoke.js
cert-manager/: clusterissuer.yaml
certs/: README.md
chaos/: pod-delete.yaml
contracts/: README.md  test_pact_example.py
cst/: config.yaml
deploy/: otel-collector.yaml
docker/: Dockerfile  Dockerfile.distroless  Dockerfile.gunicorn  Dockerfile.hypercorn  Dockerfile.secure  compose.dev.yml  compose.prod.yml  compose.stack.yml  docker-compose.yml  entrypoint.sh  prometheus.yml  seccomp-profile.json  seccomp.profile.json
docs/: ADMIN_JWT.md  API_ERRORS.md  API_KEYS.md  API_KEYS_QUOTAS.md  API_STABILITY_POLICY.md  ARCHITECTURE.md  ASVS_MAPPING.md  AUDIT_TRAIL.md  CHAOS.md  CONFIG.md  CONTAINER_SECURITY.md  DATA_CLASSIFICATION.md  DATA_ENCRYPTION.md  DATA_GOVERNANCE.md  DATA_POLICY.md  DATA_RETENTION.md  DATA_RETENTION_POLICY.md  DB_INDEXES.md  DEPLOY_CHECKLIST.md  DEPLOY_CLOUDRUN.md  DEVELOPER_ONBOARDING.md  DISASTER_RECOVERY.md  DOCKER_HARDENING.md  DORA.md  DPIA.md  DPIA_TEMPLATE.md  DRIFT_MONITORING.md  DR_STRATEGY.md  DSR.md  ERRORS.md  ERRORS_PROBLEM_JSON.md  EXPLAINABILITY.md  FAIRNESS.md  GDPR_DSR.md  HARDENING.md  HMAC_SIGNING.md  IDEMPOTENCY.md  INCIDENT_TEMPLATE.md  JOBS.md  JOBS_DISTRIBUTED.md  (+61 more)
examples/: demo.html  hmac_sign.py  python_basic.py
fuzz/: score_fuzz.py
grafana/: aegis-dashboard.json
istio/: destination-rule.yaml  peer-auth.yaml
k8s/: cron-retention.yaml  external-secrets.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  priorityclass.yaml  psa-namespace.yaml  rollout.yaml  serviceaccount.yaml
kyverno/: nonroot.yaml  policies.yaml  verify-images.yaml
load/: k6-inference.js  k6_smoke.js  locustfile.py
monitoring/: alertmanager.yaml  alerts-slo.yaml  alerts.yaml  alerts.yml  burnrate.yaml  prometheus.yml  recording-rules.yaml  servicemonitor.yaml
opa/: policy.rego
ops/: Caddyfile  compose.yaml  modsecurity.conf  nginx-modsec.conf  nginx-mtls.conf  nginx.conf  postman_collection.json  prometheus-alerts.yml  prometheus.yml
otel/: collector.yaml
perf/: k6-smoke.js
policy/: app.rego  default.policy.yaml  k8s.rego
postman/: aegis.postman_collection.json
profiles/: py-spy.sh  scalene.sh
redis/: token_bucket.lua
scripts/: audit_verify.py  db_backup.py  demo_seed.py  doctor.py  export_parquet.py  fairness_report.py  gen_dev_cert.sh  gen_third_party_notices.sh  generate_client.py  generate_completions.sh  generate_jsonschema.py  generate_openapi.py  generate_sbom.sh  healthcheck.sh  kafka_worker.py  license_report.sh  lock_deps.sh  openapi_compat.py  openapi_export.py  pg_backup.sh  release_bundle.sh  retention_purge.py  retry_webhooks.py  rotate_data_key.py  run_instrumented.sh  sbom_python.sh  selfcheck.py  smoke.sh  verify_audit_chain.py  verify_supply_chain.sh  verify_wheels_sigstore.sh
secrets/: README.md  redis.enc.yaml
tests/: policy_testcases.yaml  test_admin_keys.py  test_admin_logs_cursor.py  test_api.py  test_api_e2e.py  test_audit_verify_exists.py  test_batch.py  test_client.py  test_decision.py  test_dsr_endpoints.py  test_health.py  test_hmac.py  test_hypothesis_inference.py  test_idempotency_redis.py  test_model_monotonicity.py  test_ping.py  test_policy_admin.py  test_policy_harness.py  (+11 more)
(+197 files in other folders)
