[project]
name = "aegis-fraudstream"
version = "0.1.0"
description = "Aegis FraudStream OSS project with all-green CI checks"
authors = [{name="alanusp", email="alanursapu@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
[project.optional-dependencies]
dev = ["pytest"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
